--- a/UmbCheckout.StarterKit.Web/Views/Home.cshtml
+++ b/UmbCheckout.StarterKit.Web/Views/Home.cshtml
@@ -11,7 +11,7 @@
 <div class="px-4 py-5" style="@backgroundColour">
     <div class="container">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-            <div class="col-10 col-sm-8 col-lg-6">
+            <div class="col-md-10 col-sm-8 col-lg-6">
                 <img src="@(Model.Value<MediaWithCrops>("heroImage")?.GetCropUrl("heroImage"))." class="d-block mx-lg-auto img-fluid rounded-2 shadow" alt="@(Model.Value<MediaWithCrops>("heroImage").Value("alt"))" width="700" height="500" loading="lazy">
             </div>
             <div class="col-lg-6">
