--- a/UmbCheckout.StarterKit.Web/Views/Partials/Hero.cshtml
+++ b/UmbCheckout.StarterKit.Web/Views/Partials/Hero.cshtml
@@ -8,7 +8,7 @@
 }
 <section class="py-5 text-center" style="@backgroundImage @backgroundColour">
     <div class="container">
-        <div class="row py-lg-5">
+        <div class="row px-5 px-md-0 py-lg-5">
             <div class="col-lg-6 col-md-8 mx-auto bg-white bg-opacity-75 rounded-2 p-3">
                 <h1 class="fw-light">
                     @{
