--- a/UmbCheckout.StarterKit.Web/Views/Partials/nav/TopNavigation.cshtml
+++ b/UmbCheckout.StarterKit.Web/Views/Partials/nav/TopNavigation.cshtml
@@ -2,7 +2,7 @@
 @using UmbNav.Core.Extensions
 @using UmbNav.Core.Models
 @inherits UmbracoViewPage
-<nav class="navbar navbar-expand-md navbar-dark bg-dark" aria-label="Main Navigation">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Main Navigation">
     <div class="container">
         <a class="navbar-brand" href="/">@Model.GetSiteSettings()?.Value("siteName")</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavigation" aria-controls="mainNavigation" aria-expanded="false" aria-label="Toggle navigation">
