--- a/UmbCheckout.StarterKit.Web/wwwroot/css/editor.css
+++ b/UmbCheckout.StarterKit.Web/wwwroot/css/editor.css
@@ -128,3 +128,75 @@ p.h6 {
 	font-weight: 300;
 	line-height: 1.2;
 }
+
+/**umb_name:Primary Alert*/
+.alert .alert-primary {
+	padding: 1rem 1rem;
+	color: #052c65;
+	background-color: #cfe2ff;
+	border: 1px solid #9ec5fe;
+	border-radius: 0.375rem;
+}
+
+/**umb_name:Secondary Alert*/
+.alert .alert-secondary {
+	padding: 1rem 1rem;
+	color: #0a3622;
+	background-color: #d1e7dd;
+	border: 1px solid #a3cfbb;
+	border-radius: 0.375rem;
+}
+
+/**umb_name:Success Alert*/
+.alert .alert-success {
+	padding: 1rem 1rem;
+	color: #664d03;
+	background-color: #fff3cd;
+	border: 1px solid #ffe69c;
+	border-radius: 0.375rem;
+}
+
+/**umb_name:Danger Alert*/
+.alert .alert-danger {
+	padding: 1rem 1rem;
+	color: #58151c;
+	background-color: #f8d7da;
+	border: 1px solid #f1aeb5;
+	border-radius: 0.375rem;
+}
+
+/**umb_name:Warning Alert*/
+.alert .alert-warning {
+	padding: 1rem 1rem;
+	color: #664d03;
+	background-color: #fff3cd;
+	border: 1px solid #ffe69c;
+	border-radius: 0.375rem;
+}
+
+/**umb_name:Info Alert*/
+.alert .alert-info {
+	padding: 1rem 1rem;
+	color: #055160;
+	background-color: #cff4fc;
+	border: 1px solid #9eeaf9;
+	border-radius: 0.375rem;
+}
+
+/**umb_name:Light Alert*/
+.alert .alert-info {
+	padding: 1rem 1rem;
+	color: #495057;
+	background-color: #fcfcfd;
+	border: 1px solid #e9ecef;
+	border-radius: 0.375rem;
+}
+
+/**umb_name:Dark Alert*/
+.alert .alert-info {
+	padding: 1rem 1rem;
+	color: #495057;
+	background-color: #ced4da;
+	border: 1px solid #adb5bd;
+	border-radius: 0.375rem;
+}
