--- a/UmbCheckout.StarterKit.Web/Views/Partials/blocklist/form.cshtml
+++ b/UmbCheckout.StarterKit.Web/Views/Partials/blocklist/form.cshtml
@@ -8,5 +8,5 @@
     if (block?.ContentUdi == null) { continue; }
     var data = block.Content;
 
-    @await Html.PartialAsync("blocklist/Components/" + data.ContentType.Alias, block)
+    @await Html.PartialAsync("blocklist/FormComponents/" + data.ContentType.Alias, block)
 }
