--- a/UmbCheckout.StarterKit.Web/Views/Partials/blocklist/Components/sliderBlock.cshtml
+++ b/UmbCheckout.StarterKit.Web/Views/Partials/blocklist/Components/sliderBlock.cshtml
@@ -18,12 +18,7 @@
 }
 <div class="py-5 @backgroundColour">
     <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-12 text-center">
-                <h2 class="fw-light">@content.Value("heading")</h2>
-                @content.Value("introduction")
-            </div>
-        </div>
+        <partial name="~/Views/Partials/blocklist/Components/blockHeading.cshtml" model="Model" />
         <div class="row justify-content-center g-3 mt-3">
             <div id="@id" class="carousel slide">
                 <!-- Wrapper for slides -->
