--- a/UmbCheckout.StarterKit.Web/Views/Partials/blocklist/Components/formBlock.cshtml
+++ b/UmbCheckout.StarterKit.Web/Views/Partials/blocklist/Components/formBlock.cshtml
@@ -23,11 +23,16 @@
             <div class="row justify-content-center g-3 mt-3">
                 @await Html.GetBlockListHtmlAsync(content.Value<BlockListModel>("formFields"), "form")
                 @await Html.GetBlockListHtmlAsync(content.Value<BlockListModel>("message"), "form")
+                <div class="mb-3 visually-hidden">
+                    <label for="031660d1657942ba8675daf94f016b6e"></label>
+                    <input type="text" name="031660d1657942ba8675daf94f016b6e" autocomplete="off" />
+                </div>
             </div>
             <div class="row">
                 <div class="col-12">
                     <div class="d-grid">
                         <input type="hidden" name="formId" value="@content.Key"/>
+                        <input type="hidden" name="085e5604d16a4719ba3a4415beb1bcea" value="@DateTime.Now.Ticks" />
                         <button type="submit" class="btn btn-primary">@submitButtonLabel</button>
                     </div>
                 </div>
