--- a/UmbCheckout.StarterKit.Web/Views/Partials/blocklist/FormComponents/formTextInputMessage.cshtml
+++ b/UmbCheckout.StarterKit.Web/Views/Partials/blocklist/FormComponents/formTextInputMessage.cshtml
@@ -4,13 +4,21 @@
     var fieldName = $"{content.Key:N}";
     var label = content.Value<string>("label");
     var placeholder = content.Value<string>("placeholder");
-    var defaultValue = content.Value<string>("defaultValue");
     var fieldType = content.Value<string>("type");
     var autoComplete = content.Value<bool>("autocomplete");
     var maximumLength = content.Value<int>("maximumLength");
     var validation = content.Value<string>("validationType");
     var validationRegex = !string.IsNullOrEmpty(validation) && validation == "customValidation" ? content.Value<string>("customValidationRegex") : validation;
     var validationErrorMessage = content.HasValue("validationErrorMessage") ? content.Value<string>("validationErrorMessage") : "Please enter a valid value";
+
+    string? fieldValue = null;
+    if (TempData["FieldValues"] != null)
+    {
+        var fieldValues = (Dictionary<string, string>)TempData["FieldValues"];
+        fieldValue = fieldValues.FirstOrDefault(x => x.Key == fieldName).Value;
+    }
+
+    var defaultValue = !string.IsNullOrEmpty(fieldValue) ? fieldValue : content.Value<string>("defaultValue");
 }
 <div class="mb-3">
     <label for="@fieldName" class="form-label">@label</label>
