--- a/UmbCheckout.StarterKit.Web/Views/_Master.cshtml
+++ b/UmbCheckout.StarterKit.Web/Views/_Master.cshtml
@@ -47,6 +47,7 @@
     </footer>
     @await SmidgeHelper.JsHereAsync(debug: debugMode)
     @await SmidgeHelper.JsHereAsync("bootstrap-js-bundle", debug: debugMode)
+    @await SmidgeHelper.CssHereAsync("custom-js-bundle", debug: debugMode)
     @await RenderSectionAsync("BodyEnd", false)
 </body>
 </html>
