--- a/UmbCheckout.StarterKit.Web/App_Plugins/Contentment/components/cards-editor.html
+++ b/UmbCheckout.StarterKit.Web/App_Plugins/Contentment/components/cards-editor.html
@@ -13,7 +13,7 @@
     <div class="umb-block-card-grid" ui-sortable="vm.sortableOptions" ng-model="vm.ngModel">
         <div class="umb-block-card"
              ng-repeat="item in vm.ngModel track by $index"
-             ng-class="{'__fade': vm.populate(item, $index, 'disabled') === true}"
+             ng-class="{'__fade': vm.populate(item, $index, 'disabled') === true, '__no-edit': vm.canEdit(item, $index) === false}"
              ng-click="vm.edit($index)">
             <div class="__showcase" ng-style="vm.populateStyle(item, $index, 'cardStyle')">
                 <div class="__icon" ng-if="_icon = vm.populate(item, $index, 'icon')">
@@ -32,7 +32,7 @@
                         class="btn-reset __action umb-outline"
                         title="{{btn.label}}"
                         ng-click="btn.method(); $event.stopPropagation();"
-                        ng-repeat="btn in vm.blockActions[$index]">
+                        ng-repeat="btn in vm.blockActions[item.key]">
                     <umb-icon icon="icon-{{btn.icon}}" class="icon"></umb-icon>
                     <span class="sr-only" ng-bind="btn.label"></span>
                 </button>
