--- a/UmbCheckout.StarterKit.Web/Views/Partials/blocklist/Components/blockHeading.cshtml
+++ b/UmbCheckout.StarterKit.Web/Views/Partials/blocklist/Components/blockHeading.cshtml
@@ -9,7 +9,7 @@
         <h2 our-if="hasHeading" class="fw-light">@content.Value("heading")</h2>
         @if (hasIntroduction)
         {
-            @content.HasValue("introduction");
+            @content.Value("introduction");
         }
     </div>
 </div>
