Fix display of background image on hero element. Fixes issue #17

--- a/UmbCheckout.StarterKit.Web/Views/Partials/Hero.cshtml
+++ b/UmbCheckout.StarterKit.Web/Views/Partials/Hero.cshtml
@@ -3,7 +3,7 @@
 @using Umbraco.Cms.Core.PropertyEditors.ValueConverters
 @inherits UmbracoViewPage
 @{
-    var backgroundImage = Model.HasValue("backgroundImage") ? $"background-image:url({Model.Value<MediaWithCrops>("image").GetCropUrl("hero")}); background-repeat: no-repeat; background-size: cover;" : string.Empty;
+    var backgroundImage = Model.HasValue("backgroundImage") ? $"background-image:url({Model.Value<MediaWithCrops>("backgroundImage").GetCropUrl("hero")}); background-repeat: no-repeat; background-size: cover;" : string.Empty;
     var backgroundColour = Model.HasValue("backgroundColour") ? $"background-color:#{Model.Value<ColorPickerValueConverter.PickedColor>("backgroundColour")};" : string.Empty;
 }
 <section class="py-5 text-center" style="@backgroundImage @backgroundColour">
